# backtesting

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  HISTORY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  reload.sh  sitemap.xml  start_service.sh  stop_service.sh  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-template.md
.github/workflows/: dev.yml  release.yml
0.3.0/: objects.inv  sitemap.xml
0.3.0/api/common/: index.html
0.3.0/api/feed/: index.html
0.3.0/api/trade/: index.html
0.3.0/api/web/: index.html
0.3.0/authors/: index.html
0.3.0/contributing/: index.html
0.3.0/developer/: index.html
0.3.0/history/: index.html
0.3.0/installation/: index.html
0.3.0/search/: search_index.json
0.3.0/usage/: index.html
0.3.1/: index.html  objects.inv
0.3.1/api/common/: index.html
0.3.1/api/feed/: index.html
0.3.1/api/trade/: index.html
0.3.1/api/web/: index.html
0.3.1/search/: search_index.json
0.3.2/: objects.inv
0.3.2/api/trade/: index.html
0.3.2/api/web/: index.html
0.3.2/contributing/: index.html
0.3.2/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/trade/: index.html
0.4.0/api/web/: index.html
0.4.0/history/: index.html
0.4.0/installation/: index.html
0.4.0/search/: search_index.json
0.4.13.dev/: 404.html  index.html  objects.inv
0.4.13.dev/api/common/: index.html
0.4.13.dev/api/feed/: index.html
0.4.13.dev/api/trade/: index.html
0.4.13.dev/api/web/: index.html
0.4.13.dev/authors/: index.html
0.4.13.dev/contributing/: index.html
0.4.13.dev/developer/: index.html
0.4.13.dev/history/: index.html
0.4.13.dev/installation/: index.html
0.4.13.dev/search/: search_index.json
0.4.13.dev/usage/: index.html
0.4.19/: 404.html
0.4.19/api/common/: index.html
0.4.19/api/feed/: index.html
0.4.19/api/trade/: index.html
0.4.19/api/web/: index.html
0.4.19/history/: index.html
0.4.19/installation/: index.html
0.4.19/search/: search_index.json
0.4.2/: sitemap.xml
0.4.2/api/common/: index.html
0.4.2/api/feed/: index.html
0.4.2/api/web/: index.html
0.4.2/authors/: index.html
0.4.2/developer/: index.html
0.4.2/history/: index.html
0.4.2/search/: search_index.json
0.4.20/: index.html  objects.inv
0.4.20/api/trade/: index.html
0.4.20/contributing/: index.html
0.4.20/history/: index.html
0.4.20/installation/: index.html
0.4.20/search/: search_index.json
0.4.20/usage/: index.html
0.5.0/: index.html  objects.inv  sitemap.xml
0.5.0/api/common/: index.html
0.5.0/api/feed/: index.html
0.5.0/api/trade/: index.html
0.5.0/api/web/: index.html
0.5.0/developer/: index.html
0.5.0/history/: index.html
0.5.0/installation/: index.html
0.5.0/search/: search_index.json
0.5.0/usage/: index.html
api/common/: index.html
api/feed/: index.html
api/trade/: index.html
api/web/: index.html
authors/: index.html
backtest/: __init__.py  api.py  app.py  backtest.py  broker.py  cli.py  handlers.py  helper.py  trade.py  transaction.py  types.py
backtest/common/: errors.py  helper.py
backtest/config/: __init__.py  defaults.yaml  dev.yaml  schema.py
backtest/data/: basefeed.py  filefeed.py  zillionarefeed.py
backtest/feed/: __init__.py  basefeed.py  filefeed.py  zillionarefeed.py
backtest/trade/: __init__.py  broker.py  datatypes.py  trade.py  transaction.py  types.py
backtest/web/: __init__.py  accounts.py  interfaces.py
developer/: index.html
docker/: build.sh  dockerfile
docker/rootfs/root/.zillionare/backtest/: init_db.py
docker/rootfs/root/.zillionare/backtest/config/: defaults.yaml
docker/rootfs/root/.zillionare/backtest/data/: bars_1d.pkl  bars_1m.pkl  tyst_1d.csv  tyst_1m.csv  validation.xlsx
docker/rootfs/root/zillionare/: entrypoint.sh  zillionare_backtest-0.3.0-py3-none-any.whl  zillionare_backtest-0.3.1-py3-none-any.whl  zillionare_backtest-0.3.2-py3-none-any.whl  zillionare_backtest-0.4.12-py3-none-any.whl  zillionare_backtest-0.4.14-py3-none-any.whl  zillionare_backtest-0.4.4-py3-none-any.whl  zillionare_backtest-0.4.7-py3-none-any.whl  zillionare_backtest-0.4.9-py3-none-any.whl
docker/rootfs/root/zillionare/backtest/config/: defaults.yaml
docs/: api.md  developer.md  installation.md  usage.md
docs/api/: common.md  feed.md  trade.md  web.md
installation/: index.html
latest/api/common/: index.html
latest/api/feed/: index.html
latest/api/trade/: index.html
latest/api/web/: index.html
latest/authors/: index.html
latest/contributing/: index.html
latest/developer/: index.html
latest/history/: index.html
latest/installation/: index.html
latest/usage/: index.html
search/: search_index.json
tests/: __init__.py  test_api.py  test_app.py  test_backtest.py  test_broker.py  test_cli.py  test_helper.py  test_interfaces.py
tests/data/: __init__.py  bars_match.pkl  hljh_1d.csv  hljh_1m.csv  hljh_limits.csv  issue36.pkl  limits.csv  price_limits.pkl  tyst_limits.csv
tests/feed/: test_filefeed.py  test_zillionarefeed.py
tests/trade/: test_broker.py
tests/web/: test_interfaces.py
usage/: index.html
