[tool]
[tool.poetry]
name = "zillionare-backtest"
version = "0.2.3"
homepage = "https://github.com/zillionare/backtest"
description = "zillionare backtest framework."
authors = ["Aaron Yang <aaron_yang@jieyu.ai>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "backtest" },
    { include = "tests", format = "sdist" },
]

[[tool.poetry.source]]
name = "ali"
url = "https://mirros.aliyun.com/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fire = "0.4.0"

black  = {version = "^22.3.0", optional = true}
isort  = { version = "5.6.4", optional = true}
flake8  = { version = "3.8.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "6.1.2", optional = true}
pytest-cov  = { version = "2.10.1", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
mkdocs  = { version = "^1.2.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.2.3", optional = true}
mkdocs-material  = { version = "^8.1.11", optional = true}
mkdocstrings  = { version = "^0.18.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.3", optional = true}
twine  = { version = "^3.8.0", optional = true}
mkdocs-autorefs = {version = "^0.3.1", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
toml = {version = "^0.10.2", optional = true}
sanic = "^21.12.1"
cfg4py = "^0.9.2"
expiringdict = "^1.2.1"
asyncpg = "^0.21"
gino = "^1.0.1"
aioredis = "1.3.1"
aiohttp = "^3.8.1"
arrow = "^0.15.8"
zillionare-core-types = "^0.4.1"
psutil = "^5.9.0"
tqdm = "^4.63.0"
requests = "^2.27.1"
pandas = "^1.4.1"
sanic-testing = {version = "^0.8.2", optional = true}
Jinja2 = {version = "~3.0", optional = true}
Cython = "^0.29.28"
zillionare-omicron = {version = "^2.0.0a27", allow-prereleases = true}
livereload = { version = "^2.6.3", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "sanic-testing"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "black"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "Jinja2",
    "livereload"
    ]

[tool.poetry.scripts]
bt = 'backtest.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .history
)/
'''
